# CatLooping

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  frost  hash.py  justfile  secret.gpg
.forgejo/workflows/: build.yml  release-github.yml  release.yml
.github/workflows/: build.yml  release.yml
aur/: PKGBUILD
nix/: default.nix  paperpass-git.nix
packaging/arch/: .gitignore  PKGBUILD
src/: :w  ;  banner.rs  cipher_string.rs  clipboard.rs  config.rs  dice.rs  eff.rs  entropy_check.rs  env_paper.rs  help.rs  main.rs  mnemonic.rs  paper_backup.rs  steg.rs
src/lib/: paper_backup_lib.rs
