[package]
name = "paperbackup"
version = "1.1.30"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "paper_backup"
# path = "src/lib/paper_backup_lib.rs"

[dependencies]
base64-stream = "4.0.0"
chrono = "0.4.42"
cipha = "0.1.0"
colored = "3.0.0"
eff-wordlist = "1.0.3"
hex = "0.4.3"
image = "0.25.8"
openssl = { version = "0.10.73", features = ["vendored"] }
passwords = "3.1.16"
progress_bar = "1.4.0"
qr2term = "0.3.3"
qrcode-png = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny-bip39 = "2.0.0"
zxcvbn = "3.1.0"

[build-dependencies]
chrono = "0.4.42"



