[package]
name = "paperbackup"
version = "1.1.33"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "paper_backup"
# path = "src/lib/paper_backup_lib.rs"

[dependencies]
base64-stream = "4.0.1"
chrono = "0.4.43"
cipha = "0.1.0"
colored = "3.1.1"
eff-wordlist = "1.0.3"
hex = "0.4.3"
image = "0.25.9"
openssl = { version = "0.10.75", features = ["vendored"] }
passwords = "3.1.16"
progress_bar = "1.4.0"
qr2term = "0.3.3"
qrcode-png = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny-bip39 = "2.0.0"
toml = "0.9.11"
zxcvbn = "3.1.0"

[build-dependencies]
chrono = "0.4.43"

# optimize size
# cargo build --profile release-small
[profile.release-small]
inherits = "release"
strip = "debuginfo"
opt-level = 's'
lto = true
codegen-units = 1
